--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="FishLibrary">魚図鑑</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="camera_start">カメラへ</string>
-    <string name="pictorial_book">魚図鑑へ</string>
+    <string name="pictorial_start">分析する</string>
     <string name="input_name">ここに名前を表示</string>
     <string name="launch_camera">カメラ起動</string>
     <string name="btn_pickimage">写真選択</string>
@@ -11,5 +11,6 @@
     <string name="text_sign">ここに表示</string>
     <string name="label_image">判別する</string>
     <string name="text_insert">生物判定</string>
+    <string name="theme_text">生物分析アプリ</string>
     <string name="bunrui_text">HomoSapiens  98\n\hair  95\n\skin   93\n</string>
 </resources>
